# wolfy

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  LICENSE  app.json  docker-compose.yml  main.py  pyproject.toml  render.yml  requirements.txt  run.py
.github/: FUNDING.yml
.github/workflows/: python-ci.yml
app/: config.py  main.py
app/api/: router.py
app/api/routes/: auth.py  chat.py  files.py  legal.py  pages.py  profile.py  seo.py  websocket.py
app/core/: __init__.py  database.py  paths.py
app/dependencies/: __init__.py  session.py  templates.py
app/services/: __init__.py  attachments.py  auth.py  chat.py  email.py  matchmaker.py  messages.py  websocket_handlers.py  websocket_manager.py
app/utils/: __init__.py  text.py  validators.py
postman/: wolfy-api.json
static/: robots.txt  sitemap.xml
static/css/: main.css
static/js/: home.js
templates/: _composer.html  _message_body.html  _reply_quote.html  chat.html  home.html  login.html  onboard.html  terms.html
