[project]
name = "wolfy"
version = "1.0.0"
description = "Modern social platform built with FastAPI, MongoDB, Firebase Authentication, and JWT-based security infrastructure."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

authors = [
  { name = "Wolfy" }
]

keywords = [
  "fastapi",
  "mongodb",
  "firebase",
  "jwt",
  "python",
  "social-platform"
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B"
]

ignore = [
  "E501"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
